--- a/model.ipynb
+++ b/model.ipynb
@@ -143,6 +143,30 @@
     "\n",
     "    print(\"Epoch finished {}/{}. Loss: {:.4f}\".format(epoch+1, num_epochs, loss.item()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0592b169",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.eval()\n",
+    "\n",
+    "with open(\"eval.txt\", \"r\") as file:\n",
+    "    eval_lines = file.readlines()\n",
+    "\n",
+    "testdataset = TextDataset(load_data(eval_lines), tokenizer)\n",
+    "test_loader = DataLoader(testdataset, batch_size=32, collate_fn=collate_fn, shuffle=False)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    for i , (features, labels) in enumerate(test_loader):\n",
+    "        features, labels = features.to(device), labels.to(device)\n",
+    "        outputs = model(features)\n",
+    "        target = labels[:, 0]\n",
+    "        loss = criterion(outputs, target)\n",
+    "        print(\"Eval Loss: {:.4f}\".format(loss.item()))"
+   ]
   }
  ],
  "metadata": {
