--- a/model.ipynb
+++ b/model.ipynb
@@ -2,15 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "3fdecd39",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Florian\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "from torch.utils.data import DataLoader, Dataset\n",
-    "from transformers import GPT2Tokenizer, GPT2Model\n",
+    "from transformers import GPT2Tokenizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from torch.optim import AdamW\n",
     "\n",
@@ -21,7 +30,7 @@
     "        line = line.strip()  # \\n entfernen\n",
     "\n",
     "        words = line.split()\n",
-    "        if len(words) > 2:  # mindestens ein Feature + Label\n",
+    "        if len(words) > 2: \n",
     "            features = words[:-1]\n",
     "            features = \" \".join(features)\n",
     "            label = words[-1].strip(\".!?\")  # Satzzeichen entfernen\n",
@@ -36,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "id": "a1105ac7",
    "metadata": {},
    "outputs": [],
@@ -76,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "id": "32e2d1be",
    "metadata": {},
    "outputs": [],
@@ -90,10 +99,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e6bfe32b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch finished 1/10. Loss: 10.8486\n",
+      "Epoch finished 2/10. Loss: 10.9336\n",
+      "Epoch finished 3/10. Loss: 10.7674\n",
+      "Epoch finished 4/10. Loss: 10.8264\n",
+      "Epoch finished 5/10. Loss: 10.8341\n",
+      "Epoch finished 6/10. Loss: 10.7381\n",
+      "Epoch finished 7/10. Loss: 10.8137\n",
+      "Epoch finished 8/10. Loss: 10.8816\n",
+      "Epoch finished 9/10. Loss: 10.8317\n",
+      "Epoch finished 10/10. Loss: 10.7641\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -113,7 +139,7 @@
     "    def forward(self, x):\n",
     "        x = self.emb(x)\n",
     "        x, _ = self.lstm(x)\n",
-    "        x = x[:, -1, :]  # Nur die Ausgabe des letzten Zeitschritts verwenden\n",
+    "        x = x[:, -1, :] \n",
     "        x = self.relu(self.fc1(x))\n",
     "        x = self.dropout(x)\n",
     "        x = self.relu(self.fc2(x))\n",
@@ -149,29 +175,74 @@
    "execution_count": null,
    "id": "0592b169",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ġcent']\n",
+      "tensor([1247])\n"
+     ]
+    }
+   ],
    "source": [
+    "def eval_encoding(eval_line):\n",
+    "    eval_dict = []\n",
+    "\n",
+    "    words = eval_line.split(\" \")\n",
+    "\n",
+    "    if len(words) > 1:\n",
+    "        features = words[:-1]\n",
+    "        eval_dict.append(\" \".join(features))\n",
+    "\n",
+    "    return eval_dict\n",
+    "\n",
+    "\n",
+    "class InputData():\n",
+    "    def __init__(self, text, tokenizer, max_length=50):\n",
+    "        self.text = text\n",
+    "        self.tokenizer = tokenizer\n",
+    "\n",
+    "        self.max_length = max_length\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.text)\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        text = self.text[idx]\n",
+    "        encoding = self.tokenizer(text, truncation=True, padding='max_length', max_length=self.max_length, return_tensors='pt')['input_ids'].squeeze()\n",
+    "\n",
+    "        return {'input_ids': encoding}\n",
+    "    \n",
+    "def eval_collate_fn(batch):\n",
+    "\n",
+    "    input_ids = torch.stack([item['input_ids'] for item in batch])\n",
+    "    return input_ids\n",
+    "\n",
+    "\n",
+    "\n",
     "model.eval()\n",
     "\n",
     "with open(\"eval.txt\", \"r\") as file:\n",
-    "    eval_lines = file.readlines()\n",
+    "    eval_line = file.read()\n",
     "\n",
-    "testdataset = TextDataset(load_data(eval_lines), tokenizer)\n",
-    "test_loader = DataLoader(testdataset, batch_size=32, collate_fn=collate_fn, shuffle=False)\n",
+    "\n",
+    "testdataset = InputData(eval_encoding(eval_line), tokenizer)\n",
+    "test_loader = DataLoader(testdataset, batch_size=32, collate_fn=eval_collate_fn, shuffle=False)\n",
     "\n",
     "with torch.no_grad():\n",
-    "    for i , (features, labels) in enumerate(test_loader):\n",
-    "        features, labels = features.to(device), labels.to(device)\n",
+    "    for i , (features) in enumerate(test_loader):\n",
+    "        features = features.to(device)\n",
     "        outputs = model(features)\n",
-    "        target = labels[:, 0]\n",
-    "        loss = criterion(outputs, target)\n",
-    "        print(\"Eval Loss: {:.4f}\".format(loss.item()))"
+    "        class_preds = torch.argmax(outputs, dim=1)\n",
+    "        print(GPT2Tokenizer.from_pretrained('gpt2').convert_ids_to_tokens(class_preds))\n",
+    "        print(class_preds)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.7)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -185,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
