--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3fdecd39",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e6bfe32b",
    "metadata": {},
    "outputs": [
@@ -107,22 +107,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch finished 1/10. Loss: 10.8486\n",
-      "Epoch finished 2/10. Loss: 10.9336\n",
-      "Epoch finished 3/10. Loss: 10.7674\n",
-      "Epoch finished 4/10. Loss: 10.8264\n",
-      "Epoch finished 5/10. Loss: 10.8341\n",
-      "Epoch finished 6/10. Loss: 10.7381\n",
-      "Epoch finished 7/10. Loss: 10.8137\n",
-      "Epoch finished 8/10. Loss: 10.8816\n",
-      "Epoch finished 9/10. Loss: 10.8317\n",
-      "Epoch finished 10/10. Loss: 10.7641\n"
+      "12.1\n",
+      "Epoch finished 1/10. Loss: 6.3142\n",
+      "Epoch finished 2/10. Loss: 8.0549\n",
+      "Epoch finished 3/10. Loss: 7.9287\n",
+      "Epoch finished 4/10. Loss: 7.5862\n",
+      "Epoch finished 5/10. Loss: 7.6050\n",
+      "Epoch finished 6/10. Loss: 5.4170\n",
+      "Epoch finished 7/10. Loss: 5.8941\n",
+      "Epoch finished 8/10. Loss: 7.3773\n",
+      "Epoch finished 9/10. Loss: 6.9970\n",
+      "Epoch finished 10/10. Loss: 9.7206\n"
      ]
     }
    ],
    "source": [
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(torch.version.cuda)\n",
     "\n",
     "class TextGenerationModel(nn.Module):\n",
     "    def __init__(self, emb_dim, hidden_size, output_size):\n",
@@ -152,7 +154,7 @@
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = AdamW(model.parameters(), lr=0.001)\n",
     "\n",
-    "num_epochs = 10\n",
+    "num_epochs = 20\n",
     "\n",
     "for epoch in range(num_epochs):\n",
     "    model.train()\n",
@@ -163,8 +165,8 @@
     "\n",
     "        target = labels[:, 0]\n",
     "        loss = criterion(outputs, target)\n",
-    "        loss.backward()\n",
     "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
     "    print(\"Epoch finished {}/{}. Loss: {:.4f}\".format(epoch+1, num_epochs, loss.item()))"
@@ -172,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "0592b169",
    "metadata": {},
    "outputs": [
@@ -180,8 +182,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Ġcent']\n",
-      "tensor([1247])\n"
+      "['s']\n",
+      "tensor([82], device='cuda:0')\n"
      ]
     }
    ],
