--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "3fdecd39",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
     "def load_data(lines):\n",
     "    dataset_dict = {}\n",
     "    for line in lines:\n",
-    "        line = line.strip()  # \\n entfernen\n",
+    "        line = line.strip()\n",
     "\n",
     "        words = line.split()\n",
     "        if len(words) > 2: \n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "0592b169",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
     "    words = eval_line.split(\" \")\n",
     "\n",
     "    if len(words) > 1:\n",
-    "        features = words[:-1]\n",
+    "        features = words\n",
     "        eval_dict.append(\" \".join(features))\n",
     "\n",
     "    return eval_dict\n",
